grammar.js
    source_file: $ => repeat($._top_level_statement),

    // Top-level statement: blocks or regular statements (each decides where it ends)
    _top_level_statement: $ =>
      choice(
        // Block directives: highest precedence (don't consume newlines internally)
        prec(1, $.macro_definition),
        prec(1, $.if_block),
        prec(1, $.rept_block),
        prec(1, $.for_block),
        prec(1, $.load_block),
        prec(1, $.union_block),

        // Standalone block comments
        seq($.block_comment, /\r?\n/),

        // 1. Labels (global/local/anonymous)
        seq($.label_definition, optional($.inline_comment), /\r?\n/),

        // 2. Directives (SECTION, DEF, LOAD, ENDL, etc.)
        prec(2, seq($.directive, optional($.inline_comment), /\r?\n/)),

        // 3. Instructions – *only* real opcodes
        prec(1, seq($.instruction_line, optional($.inline_comment), /\r?\n/)),

        // 4. Macro invocations – non-opcode symbols
        prec(2, seq($.macro_invocation_line, optional($.inline_comment), /\r?\n/)),

        // 5. Blank or comment-only lines
        seq(optional($.inline_comment), /\r?\n/)
      ),

    // ----- Comments -----

    inline_comment: $ => prec(1, $.comment),

    // C-style block comments (RGBDS behavior: no nesting)
    instruction_list: $ =>
      seq(
        $.instruction,
        repeat(seq('::', $.instruction))
      ),

    instruction: $ =>
      seq(
        field('opcode', choice(
          alias($._instruction_token, $.identifier),
          $.interpolatable_identifier
        )),
        optional($.operand_list)
      ),

    operand_list: $ =>
      seq(
        $.operand,
        repeat(seq(',', $.operand))
      ),

    directive: $ =>
      choice(
        $.section_directive,
        $.macro_definition,
        $.if_block,
        $.redef_directive,
        $.def_directive,
        $.assert_directive,
        $.purge_directive,
        $.align_directive,
        $.ds_directive,
        $.shift_directive,
        $.break_directive,
        $.load_block,
        $.include_directive,
        $.incbin_directive,
        $.union_block,
        $.fragment_literal,
        $.charmap_directive,
        $.newcharmap_directive,
        $.setcharmap_directive,
        $.export_directive,
        $.opt_directive,
        $.simple_directive
      ),

    section_directive: $ =>
      seq(
        field('keyword', alias(/[Ss][Ee][Cc][Tt][Ii][Oo][Nn]/, $.directive_keyword)),
        optional(field('fragment', alias(/[Ff][Rr][Aa][Gg][Mm][Ee][Nn][Tt]/, $.directive_keyword))),
        optional(field('union', alias(/[Uu][Nn][Ii][Oo][Nn]/, $.directive_keyword))),
        $.string_literal,
        optional(seq(',', $.section_type, optional($.section_address))),
        optional($.section_options)
      ),

    section_type: $ =>
      choice(
        /[Rr][Oo][Mm]0/,
        /[Rr][Oo][Mm][Xx]/,
        /[Ww][Rr][Aa][Mm]0/,
        /[Ww][Rr][Aa][Mm][Xx]/,
        /[Hh][Rr][Aa][Mm]/,
        /[Ss][Rr][Aa][Mm]/,
        /[Oo][Aa][Mm]/,
        /[Vv][Rr][Aa][Mm]/
      ),

    section_address: $ =>
      seq(
        '[',
        field('address', $.expression),
        ']'
      ),

    section_options: $ =>
      repeat1(
        seq(',', $.section_option)
      ),

    section_option: $ =>
      choice(
        $.bank_option,
        $.align_option
      ),

    bank_option: $ =>
      seq(
        alias(/[Bb][Aa][Nn][Kk]/, 'BANK'),
        '[',
        field('bank', $.expression),
        ']'
      ),

    align_option: $ =>
      seq(
        alias(/[Aa][Ll][Ii][Gg][Nn]/, 'ALIGN'),
        '[',
        field('align', $.expression),
        optional(seq(',', field('offset', $.expression))),
        ']'
      ),

    def_directive: $ =>
      seq(
        field('keyword', alias(/[Dd][Ee][Ff]/, $.directive_keyword)),
        field('name', choice(
          $.identifier,
          $.raw_identifier,
          $.interpolatable_identifier
        )),
        choice(
          // String constant: DEF name EQUS "value" or #"value"
          seq(
            field('assign_type', alias(/[Ee][Qq][Uu][Ss]/, $.directive_keyword)),
            field('value', choice($.string_literal, $.raw_string_literal))
          ),
          // Numeric constant (immutable): DEF name EQU value
          seq(
            field('assign_type', alias(/[Ee][Qq][Uu]/, $.directive_keyword)),
            field('value', $.expression)
          ),
          // Variable (mutable): DEF name = value
          seq(
            field('assign_type', choice('=', '+=', '-=', '*=', '/=', '%=', '<<=', '>>=', '&=', '|=', '^=')),
            field('value', $.expression)
          ),
          // RS offset constants: DEF name RB/RW/RL count
          seq(
            field('assign_type', choice(/[Rr][Bb]/, /[Rr][Ww]/, /[Rr][Ll]/)),
            optional(field('value', $.expression))
          )
        )
      ),

    assert_directive: $ =>
      prec.right(seq(
        field('keyword', choice(
          alias(/[Aa][Ss][Ss][Ee][Rr][Tt]/, $.directive_keyword),
          alias(/[Ss][Tt][Aa][Tt][Ii][Cc]_[Aa][Ss][Ss][Ee][Rr][Tt]/, $.directive_keyword)
        )),
        // Optional severity with REQUIRED comma: ASSERT [severity,] condition [, message]
        optional(seq(
          field('severity', $.identifier),
          ','
        )),
        field('condition', $.expression),
        optional(seq(',', field('message', $.string_literal)))
      )),

    ds_directive: $ =>
      seq(
        field('keyword', alias(/[Dd][Ss]/, $.directive_keyword)),
        choice(
          seq($.align_option, optional(seq(',', $.argument_list))),
          $.argument_list
        )
      ),

    export_directive: $ =>
      seq(
        field('keyword', alias(/[Ee][Xx][Pp][Oo][Rr][Tt]/, $.directive_keyword)),
        choice($.identifier, $.interpolatable_identifier, $.anonymous_label_ref, $.macro_argument),
        repeat(seq(',', choice($.identifier, $.interpolatable_identifier, $.anonymous_label_ref, $.macro_argument)))
      ),

    opt_directive: $ =>
      seq(
        field('keyword', alias(/[Oo][Pp][Tt]/, $.directive_keyword)),
        optional(seq(
          $.opt_arg,
          repeat(seq(',', $.opt_arg))
        ))
      ),

    // OPT arguments are parsed in RAW mode by RGBDS - they can be string literals
    // or raw text that looks like identifiers but may contain special characters
    opt_arg: $ =>
      choice(
        $.string_literal,
        $.raw_string_literal,
        alias($.opt_raw_string, $.raw_string)
      ),

    // Raw string token for OPT arguments - matches RGBDS LEXER_RAW behavior
    // Excludes quotes to allow string_literal to match first
    simple_directive: $ =>
      seq(
        field('keyword', $.directive_keyword),
        optional($.argument_list)
      ),

    directive_keyword: $ =>
      token(
        choice(
          /[Rr][Ee][Dd][Ee][Ff]/,
          /[Ee][Qq][Uu]/,
          /[Ee][Qq][Uu][Ss]/,
          /[Dd][Bb]/,
          /[Dd][Ww]/,
          /[Dd][Ss]/,
          /[Cc][Hh][Aa][Rr]/,
          /[Rr][Ee][Aa][Dd][Ff][Ii][Ll][Ee]/,
          /[Pp][Rr][Ii][Nn][Tt]/,
          /[Pp][Rr][Ii][Nn][Tt][Ll][Nn]/,
          /[Pp][Rr][Ii][Nn][Tt][Tt]/,
          /[Ff][Aa][Ii][Ll]/,
          /[Ww][Aa][Rr][Nn]/,
          /[Ii][Mm][Pp][Oo][Rr][Tt]/,
          /[Xx][Rr][Ee][Ff]/,
          /[Rr][Ss][Ss][Ee][Tt]/,
          /[Rr][Ss][Rr][Ee][Ss][Ee][Tt]/,
          /[Pp][Uu][Ss][Hh][Oo]/,
          /[Pp][Oo][Pp][Oo]/,
          /[Pp][Uu][Ss][Hh][Ss]/,
          /[Pp][Oo][Pp][Ss]/,
          /[Pp][Uu][Ss][Hh][Cc]/,
          /[Pp][Oo][Pp][Cc]/,
          /[Cc][Hh][Aa][Rr][Mm][Aa][Pp]/,
          /[Nn][Ee][Ww][Cc][Hh][Aa][Rr][Mm][Aa][Pp]/,
          /[Ss][Ee][Tt][Cc][Hh][Aa][Rr][Mm][Aa][Pp]/,
          /[Ll][Oo][Aa][Dd]/,
          /[Ee][Nn][Dd][Ll]/,
          /[Ff][Rr][Aa][Gg][Mm][Ee][Nn][Tt]/,
          /[Aa][Ll][Ii][Gg][Nn]/
        )
      ),

    argument_list: $ =>
      seq(
        $.expression,
        repeat(seq(',', $.expression))
      ),

    // ----- Block directives -----

    macro_definition: $ =>
      seq(
        field('keyword', alias(/[Mm][Aa][Cc][Rr][Oo]/, $.directive_keyword)),
        field('name', $.identifier),
        optional($.macro_params),
        /\r?\n/,
        repeat($._top_level_statement),
        field('end', alias(/[Ee][Nn][Dd][Mm]/, $.directive_keyword))
      ),

    fragment_literal: $ =>
      choice(
        // Block-style fragment literal with statements (allows nested fragments)
        prec.left(seq(
          '[[',
          optional(/\r?\n/),
          repeat($._top_level_statement),
          ']]'
        )),
        // Inline fragment literal used where a statement fits (e.g., DW [[ db 1 ]])
        prec.left(seq(
          '[[',
          choice(
            $.label_definition,
            $.instruction_line,
            $.directive
          ),
          ']]'
        ))
      ),

    // Note: RGBASM does not have C-style preprocessor directives.
    // The # prefix is only used for raw identifiers (e.g., #load, #IF)
    // to prevent keywords from being treated as reserved words.

    // ----- Expressions -----

    expression: $ =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.primary_expression
      ),

    function_call: $ =>
      seq(
        field('function', $.identifier),
        '(',
        optional(
          seq(
            $.expression,
            repeat(seq(',', $.expression))
          )
        ),
        ')'
      ),

    binary_expression: $ =>
      choice(...binary_ops($)),

    number_literal: $ =>
      token(
        choice(
          // Precise fixed-point: 12.34q8 (q or Q, underscores allowed)
          /\d[\d_]*\.\d[\d_]*[qQ]\d[\d_]*/,
          // Fixed-point: 123.45 (underscores allowed)
          /\d[\d_]*\.\d[\d_]*/,
          // Hexadecimal: $12_AB or 0x12_AB
          /\$[0-9A-Fa-f][0-9A-Fa-f_]*/,
          /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*/,
          // Octal: &123_456 or 0o123_456
          /&[0-7][0-7_]*/,
          /0[oO][0-7][0-7_]*/,
          // Binary: %1010_0101 or 0b1010_0101
          /%[01][01_]*/,
          /0[bB][01][01_]*/,
          // Decimal integer (underscores allowed)
          /\d[\d_]*/
        )
      ),

    // Single-character numeric constants like 'A' or '\n'
    char_literal: $ =>
      token(seq("'", /([^'\\\r\n]|\\.)+/, "'")),

    string_literal: $ =>
      choice(
        $._triple_quote_string,
        $._regular_string
      ),

    _triple_quote_string: $ =>
      seq(
        '"""',
        repeat(choice(
          $.interpolation,
          $._string_content_triple
        )),
        '"""'
      ),

    _regular_string: $ =>
      seq(
        '"',
        repeat(choice(
          $.interpolation,
          $._string_content
        )),
        '"'
      ),

    interpolation: $ =>
      choice(
        // Nested interpolation: {{name}} - try first as it's most specific
        seq(
          '{',
          field('inner', $.interpolation),
          '}'
        ),
        // Format with symbol: {fmt:name} - must try before simple symbol
        prec(1, seq(
          '{',
          field('format', $.format_spec),
          field('symbol', choice($.identifier, $.raw_identifier)),
          '}'
        )),
        // Simple symbol: {name} - lowest priority
        seq(
          '{',
          field('symbol', choice($.identifier, $.raw_identifier)),
          '}'
        )
      ),

    format_spec: $ =>
      token(seq(
        optional(choice('+', ' ')),  // sign
        optional('#'),                // exact
        optional('-'),                // align
        optional('0'),                // pad
        optional(/[0-9]+/),           // width
        optional(seq('.', /[0-9]*/)), // frac
        optional(/q[0-9]+/),          // prec
        choice('d', 'u', 'x', 'X', 'b', 'o', 'f', 's'), // type
        ':'                           // disambiguator
      )),

    // Macro argument escapes usable inside macro/rept bodies
    macro_argument: $ =>
      token(seq(
        '\\',
        choice(
          // \1 through \9
          /[1-9]/,
          // \<10>, \<-1>, \<identifier>, \<v{d:x}> (accept until closing '>')
          seq('<', /[^>\r\n]+/, '>')
        )
      )),

    interpolatable_identifier: $ =>
      prec.left(seq(
        $.interpolation,
        repeat(choice($.identifier_fragment, $.interpolation))
      )),

    // Identifier fragment: part of identifier without braces
    // Must be immediate to prevent whitespace between parts
